--- a/DOM/Activity 3 (Simon Game)/style.css
+++ b/DOM/Activity 3 (Simon Game)/style.css
@@ -5,9 +5,18 @@ body {
 .btn {
     height: 200px;
     width: 200px;
-    border: 5px solid black;
-    border-radius: 20%;
     margin: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    font-size: 24px;
+    transition: transform 0.3s, box-shadow 0.3s;
+    user-select: none;
+    transform: translate(0, 0);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+    background: linear-gradient(45deg, rgba(255, 255, 255, 0.9), rgba(0, 0, 0, 0.1));
+    border-radius: 50%; /* Makes the buttons round */
 }
 
 .btn-container {
@@ -16,21 +25,31 @@ body {
 }
 
 .red {
-    background-color: #d9598a;
+    background: linear-gradient(45deg, #ea4066, #b31c3c);
+    color: white;
 }
 
 .yellow {
-    background-color: #f99b45;
+    background: linear-gradient(45deg, #ff9642, #d86c11);
+    color: white;
 }
 
 .green {
-    background-color: #63aac0;
+    background: linear-gradient(45deg, #6dc6d1, #458a8d);
+    color: white;
 }
 
 .purple {
-    background-color: #819ff9;
+    background: linear-gradient(45deg, #8d88f9, #5c4ec3);
+    color: white;
 }
 
-.flash{
+.flash {
     background-color: white;
+    color: black;
+}
+
+.btn:hover {
+    transform: translate(2px, 2px);
+    box-shadow: 7px 7px 10px rgba(0, 0, 0, 0.4);
 }
